upd: デプロイに合わせた設定変更

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-APP_NAME=ScoreListAPI
-APP_ENV=production
+APP_NAME=譜面リスト作成ツール
+APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
@@ -22,6 +22,9 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+# SESSION_DOMAIN=localhost:3000
+# SANCTUM_STATEFUL_DOMAINS=localhost:3000
+# SESSION_SECURE_COOKIE=true
 
 MAIL_MAILER=smtp
 MAIL_HOST=127.0.0.1
@@ -29,7 +32,7 @@ MAIL_PORT=25
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="info@umkz.net"
+MAIL_FROM_ADDRESS="score@mail.umkz.net"
 MAIL_FROM_NAME="${APP_NAME}"
 
 VITE_APP_NAME="${APP_NAME}"
